fix(css): collapse, миксин перенесен внутрь styles

--- a/src/collapse/styles.less
+++ b/src/collapse/styles.less
@@ -1,3 +1,12 @@
 .collapse {
-  #collapse.this();
+  max-height: 0;
+  overflow: hidden;
+  transition-duration: ~"calc(var(--common-animationDuration-primary) * 2)";
+  transition-timing-function: cubic-bezier(0, 1, 0, 1);
+  transition-property: max-height;
+
+  &--show {
+    max-height: 99em;
+    transition-timing-function: ease-in-out;
+  }
 }
